<resources>
    <string name="facebook_app_id">2021611001386227</string>
    <string name="fb_login_protocol_scheme">fb2021611001386227</string>
    <string name="app_name">BarBari</string>
    <string name="welcome">welcome to BarBari, this app meant to help you to organize your free time with friend. we hope you enjoy, for problem BarBari@gmail.com</string>
    <string name="login_quart">please enter your Username and Password \n</string>
    <string name="eara1">if you dont have any \n
        we recommend to creat one at the link below or enter as a guest</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="please_enter_your_password_here">Please enter your password here</string>
    <string name="please_enter_your_username_here">Please enter your Username here</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_barbari">welcome to BarBari</string>
    <string name="login">LogIn As\n Costumer</string>
    <string name="forgot_password">forgot password</string>
    <string name="get_in_as_a_guest">get in as a guest</string>
    <string name="creat_user">creat user</string>
    <string name="manager_login_btn">LogIn</string>
    <string name="enter_your_information">Enter your information</string>
    <string name="confirm_password">confirm Password</string>
    <string name="enter_password_again">enter password again</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_your_mail">enter your mail</string>
    <string name="hometown">HomeTown</string>
    <string name="enter_where_you_living">enter where you living</string>
    <string name="creat_costumer">Creat Costumer</string>
    <string name="enter_your_e_mail">Enter Your E-Mail</string>
    <string name="name_gmail_com">name@Gmail.com</string>
    <string name="send_me_my_password">Send me my password</string>
    <string name="buy_chip_beer">buy happy hour beer</string>
    <string name="your_kod">your Kod:</string>
    <string name="ok_shut_down_the_phon_nenjoy_your_beer">ok, shut down the phon  enjoy your beer:)</string>
    <string name="show_the_kod_to_the_barmen_n_and_your_beer_is_on_the_way">show the kod to the barmen  and your beer is on the way</string>
    <string name="title">enter your title bar</string>
    <string name="titlebar">title</string>
    <string name="des_bar">enter the description of your bar</string>
    <string name="description_bar">description</string>
    <string name="im_bar_up">upload an image of your bar</string>
    <string name="upload_b">upload image</string>

    <string-array name="my_bar">
        <item>bar1</item>
        <item>bar2</item>
        <item>bar3</item>
        <item>bar4</item>
        <item>bar5</item>
        <item>bar6</item>
        <item>bar7</item>
        <item>bar8</item>
        <item>bar9</item>
        <item>bar10</item>
        <item>bar11</item>
        <item>bar12</item>
        <item>bar13</item>
        <item>bar14</item>
        <item>bar15</item>
        <item>bar16</item>
        <item>bar17</item>
        <item>bar18</item>
    </string-array>

    <string-array name="bar_des">
        <item>bar1 descrrr</item>
        <item>bar2 des</item>
        <item>bar3 des</item>
        <item>bar4 des</item>
        <item>bar5 des</item>
        <item>bar6 des</item>
        <item>bar7 dess</item>
        <item>bar8 des</item>
        <item>bar9 des</item>
        <item>bar10 des</item>
        <item>bar11 des</item>
        <item>bar12 des</item>
        <item>bar13 des</item>
        <item>bar14 des</item>
        <item>bar15 des</item>
        <item>bar16 des</item>
        <item>bar17 des</item>
        <item>bar18 desss</item>
    </string-array>

    <string-array name="bar_place">
        <item>ashdod</item>
        <item>askelon</item>
        <item>tel-aviv</item>
        <item>ashdod</item>
        <item>ashdod</item>
        <item>ashdod</item>
        <item>ashdod</item>
        <item>ashdod</item>
        <item>askelon</item>
        <item>askelon</item>
        <item>askelon</item>
        <item>askelon</item>
        <item>tel-aviv</item>
        <item>tel-aviv</item>
        <item>tel-aviv</item>
        <item>tel-aviv</item>
        <item>tel-aviv</item>
        <item>tel-aviv</item>
    </string-array>


    <string-array name="bar_open_t">
        <item>24/7</item>
        <item>21:00-02:00</item>
        <item>18:00-04:00</item>
        <item>24/7</item>
        <item>24/7</item>
        <item>24/7</item>
        <item>24/7</item>
        <item>24/7</item>
        <item>21:00-02:00</item>
        <item>21:00-02:00</item>
        <item>21:00-02:00</item>
        <item>21:00-02:00</item>
        <item>18:00-04:00</item>
        <item>18:00-04:00</item>
        <item>18:00-04:00</item>
        <item>18:00-04:00</item>
        <item>18:00-04:00</item>
        <item>18:00-04:00</item>
    </string-array>


</resources>
